[gd_scene load_steps=24 format=3 uid="uid://c7mu7ptklptdy"]

[ext_resource type="PackedScene" uid="uid://dd5u4u5skqu14" path="res://ui/slider.tscn" id="1_ephah"]
[ext_resource type="Theme" uid="uid://hrh7luenxm4q" path="res://ui/ui_theme.tres" id="1_tphsw"]
[ext_resource type="Script" path="res://design_tab_container.gd" id="2_5a6ub"]
[ext_resource type="Script" path="res://global.gd" id="2_a1nil"]
[ext_resource type="PackedScene" uid="uid://dq0tyxm2mjm2c" path="res://ui/dropdown.tscn" id="3_5q1b1"]
[ext_resource type="Script" path="res://visuals.gd" id="3_x7fjc"]
[ext_resource type="PackedScene" uid="uid://b3s3b4oc57130" path="res://ui/masslabel.tscn" id="4_6ndst"]
[ext_resource type="Texture2D" uid="uid://ndsnxl2ma62l" path="res://sprites/black_gradient.tres" id="4_il1xn"]
[ext_resource type="Texture2D" uid="uid://b4r6kqnr630ej" path="res://sprites/parabola_sprite.tres" id="4_luq0d"]
[ext_resource type="Texture2D" uid="uid://r7i6g6kp47jf" path="res://ui/play_icon.png" id="5_j0s33"]
[ext_resource type="Texture2D" uid="uid://cu6op324jaqdu" path="res://ui/earth_background.png" id="5_jfiya"]
[ext_resource type="Script" path="res://launch_tab_controller.gd" id="5_ql1eb"]
[ext_resource type="Texture2D" uid="uid://04lbd1joihaa" path="res://ui/space.png" id="6_8d2on"]
[ext_resource type="Texture2D" uid="uid://b8iisjcs8qgr2" path="res://ui/pause_icon.png" id="6_174ps"]
[ext_resource type="Texture2D" uid="uid://bad6t8h8owq65" path="res://ui/earth.png" id="7_0e4at"]
[ext_resource type="Texture2D" uid="uid://iaejspnjfgv7" path="res://ui/restart_icon.png" id="7_atm3o"]
[ext_resource type="Texture2D" uid="uid://ctomfdg0n1nkt" path="res://ui/axes.png" id="9_ivmuq"]
[ext_resource type="Script" path="res://results_tab_container.gd" id="11_yddqe"]

[sub_resource type="Animation" id="Animation_kwxew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/VisualContainer/Design/Rocket:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/VisualContainer/Design/Rocket:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(288, 540)]
}

[sub_resource type="Animation" id="Animation_u6nme"]
resource_name = "rocket_launch"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/VisualContainer/Design/Rocket:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/VisualContainer/Design/Rocket:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(288, 540), Vector2(288, 150)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p732s"]
_data = {
"RESET": SubResource("Animation_kwxew"),
"rocket_launch": SubResource("Animation_u6nme")
}

[sub_resource type="Gradient" id="Gradient_06iy2"]
colors = PackedColorArray(0.344703, 0.0452834, 0.105531, 1, 0.621338, 0.178187, 0.308018, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dnx14"]
gradient = SubResource("Gradient_06iy2")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tphsw")
script = ExtResource("2_a1nil")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p732s")
}

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.458824, 0.458824, 0.458824, 1)

[node name="FormButton" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 8.0
offset_right = 137.0
offset_bottom = 27.0
text = "Click here for feedback form"

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 234.0
offset_right = 391.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Time played: "

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VisualContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 27
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("3_x7fjc")

[node name="Design" type="Node" parent="MarginContainer/HBoxContainer/VisualContainer"]

[node name="Rocket" type="Node2D" parent="MarginContainer/HBoxContainer/VisualContainer/Design"]
z_index = 2
position = Vector2(288, 540)
scale = Vector2(0.1, 0.1)
metadata/_edit_group_ = true

[node name="Polygon2D" type="Polygon2D" parent="MarginContainer/HBoxContainer/VisualContainer/Design/Rocket"]
rotation = -3.14159
offset = Vector2(-20, 0)
texture = ExtResource("4_il1xn")
polygon = PackedVector2Array(0, 0, 40, 0, 40, 300, 0, 300)

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VisualContainer/Design/Rocket"]
modulate = Color(0.501961, 0.8, 0.756863, 1)
position = Vector2(0, -300)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_luq0d")
offset = Vector2(0, -400)

[node name="Polygon2D2" type="Polygon2D" parent="MarginContainer/HBoxContainer/VisualContainer/Design/Rocket"]
z_index = -1
rotation = -1.57079
texture = SubResource("GradientTexture2D_dnx14")
polygon = PackedVector2Array(120, 0, 0, 70, 0, -70)

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VisualContainer/Design"]
offset_left = 8.0
offset_top = 27.0
offset_right = 574.0
offset_bottom = 640.0
texture = ExtResource("5_jfiya")

[node name="BlackTexture" type="TextureRect" parent="MarginContainer/HBoxContainer/VisualContainer/Design"]
visible = false
offset_left = 8.0
offset_top = 27.0
offset_right = 574.0
offset_bottom = 640.0
texture = ExtResource("6_8d2on")

[node name="LaunchPlanet" type="TextureRect" parent="MarginContainer/HBoxContainer/VisualContainer/Design/BlackTexture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = 201.5
offset_right = 981.0
offset_bottom = 1225.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.08, 0.08)
texture = ExtResource("7_0e4at")

[node name="GoalPlanet" type="TextureRect" parent="MarginContainer/HBoxContainer/VisualContainer/Design/BlackTexture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -296.5
offset_right = 981.0
offset_bottom = 727.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.08, 0.08)
texture = ExtResource("7_0e4at")

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VisualContainer/Design/BlackTexture"]
layout_mode = 0
offset_left = 114.0
offset_top = 436.0
offset_right = 447.0
offset_bottom = 464.0
theme = ExtResource("1_tphsw")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Not enough thrust to launch!"

[node name="TabContainer" type="TabContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tab_alignment = 2
current_tab = 1
clip_tabs = false

[node name="DESIGN" type="TabBar" parent="MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/DESIGN"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_5a6ub")

[node name="SliderEngines" parent="MarginContainer/HBoxContainer/TabContainer/DESIGN/VBoxContainer" instance=ExtResource("1_ephah")]
layout_mode = 2
text = "Number of engines"
min_value = 1
max_value = 9
step = 1
default_value = 1

[node name="SliderHeight" parent="MarginContainer/HBoxContainer/TabContainer/DESIGN/VBoxContainer" instance=ExtResource("1_ephah")]
layout_mode = 2
text = "Height (m)"
min_value = 50
max_value = 120
step = 1
default_value = 80

[node name="SliderDiameter" parent="MarginContainer/HBoxContainer/TabContainer/DESIGN/VBoxContainer" instance=ExtResource("1_ephah")]
layout_mode = 2
text = "Diameter (m)"
min_value = 8
max_value = 15
step = 1
default_value = 10

[node name="DropDownMaterial" parent="MarginContainer/HBoxContainer/TabContainer/DESIGN/VBoxContainer" instance=ExtResource("3_5q1b1")]
layout_mode = 2
text = "Material"
items_comma_separated = "Aluminum, Titanium, Carbon composite"

[node name="DropDownNoseShape" parent="MarginContainer/HBoxContainer/TabContainer/DESIGN/VBoxContainer" instance=ExtResource("3_5q1b1")]
layout_mode = 2
text = "Nose shape"
items_comma_separated = "Parabolic, Ogive, Cone, Blunt"

[node name="MassLabel" parent="MarginContainer/HBoxContainer/TabContainer/DESIGN/VBoxContainer" instance=ExtResource("4_6ndst")]
layout_mode = 2

[node name="LAUNCH" type="TabBar" parent="MarginContainer/HBoxContainer/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ql1eb")

[node name="SliderFuelAmount" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer" instance=ExtResource("1_ephah")]
layout_mode = 2
text = "Fuel Amount (liquid tons)"
min_value = 100
max_value = 500
step = 10
default_value = 300

[node name="DropDownFuelType" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer" instance=ExtResource("3_5q1b1")]
layout_mode = 2
text = "Fuel Type"
items_comma_separated = "Liquid Oxygen, Liquid Hydrogen, Solid Fuel"

[node name="DropDownLaunch" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer" instance=ExtResource("3_5q1b1")]
layout_mode = 2
text = "Launch Location"
items_comma_separated = "Earth, Moon, Mars"

[node name="LabelGravity" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer"]
layout_mode = 2
text = "Gravity:"
horizontal_alignment = 2

[node name="DropDownGoal" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer" instance=ExtResource("3_5q1b1")]
layout_mode = 2
text = "Goal Destination"
items_comma_separated = "Earth, Moon, Mars"

[node name="LabelDistance" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer"]
layout_mode = 2
text = "Distance:"
horizontal_alignment = 2

[node name="TimeControlsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonPlay" type="Button" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer/TimeControlsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("5_j0s33")
icon_alignment = 1

[node name="ButtonPause" type="Button" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer/TimeControlsContainer"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("6_174ps")
icon_alignment = 1

[node name="ButtonRestart" type="Button" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer/TimeControlsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("7_atm3o")
icon_alignment = 1

[node name="MassLabel" parent="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer" instance=ExtResource("4_6ndst")]
layout_mode = 2
with_fuel = true

[node name="RESULTS" type="TabBar" parent="MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/TabContainer/RESULTS"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_yddqe")

[node name="Label" type="RichTextLabel" parent="MarginContainer/HBoxContainer/TabContainer/RESULTS/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
text = "Summary will display after rocket is launched."
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/TabContainer/RESULTS/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_ivmuq")

[node name="DropDown" parent="MarginContainer/HBoxContainer/TabContainer/RESULTS/VBoxContainer" instance=ExtResource("3_5q1b1")]
layout_mode = 2
text = "Graph:"
items_comma_separated = "y vs t, v vs t, a vs t, KE vs t, U vs t, Thrust vs t"

[connection signal="pressed" from="FormButton" to="." method="_on_form_button_pressed"]
[connection signal="tab_changed" from="MarginContainer/HBoxContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer/TimeControlsContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/TabContainer/LAUNCH/VBoxContainer/TimeControlsContainer/ButtonRestart" to="." method="_on_button_restart_pressed"]
